--- a/Fraud_Detect/package.json
+++ b/Fraud_Detect/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.4.6",
     "axios": "^1.8.1",
     "neo4j-driver": "^5.28.1",
+    "node": "^23.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
